# Mandelbrot_set

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: super-linter.yml
src/: global_config.cpp  global_config.hpp  hip_mandel.cpp  main.cpp  mandel_sequential.cpp  mandelbrot.hpp  save_image.cpp  save_image.h  sfml_event.cpp  sfml_main.cpp  sfml_mandelbrot.hpp  sfml_render.cpp  utils.hpp  window_utils.cpp  window_utils.h
src/core/: global_config.cpp  global_config.cppm  global_config.hpp  window_dim.hpp  window_utils.cpp  window_utils.hpp
src/fractal/: mandel_hip.cpp  mandel_openmp.cpp  mandel_sequential.cpp  mandelbrot.hpp
src/gl/: gl_event.cpp  gl_mandelbrot.hpp  gl_render.cpp  gl_shader.hpp  sfml_event.cpp  sfml_julia.cpp
src/glfw/: glfw_utils.cpp  glfw_utils.hpp
src/render/: color_scheme.cpp  color_scheme.hpp  hip_color.cpp  save_image.cpp  save_image.hpp
src/sfml/: sfml_event.cpp  sfml_julia.cpp  sfml_mandelbrot.hpp  sfml_render.cpp
